--- a/discovery-server/Dockerfile
+++ b/discovery-server/Dockerfile
@@ -1,5 +1,7 @@
 FROM openjdk:8-jdk-alpine
 
-COPY target/discovery-server-0.0.1-SNAPSHOT.jar app.jar
+COPY ./wait-until-start.sh wait-until-start
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+RUN chmod +x wait-until-start
+
+COPY discovery-server/target/discovery-server-0.0.1-SNAPSHOT.jar app.jar
