--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,3 +153,30 @@ services:
       AUTH-SERVER_PORT: 8080
     mem_limit: 512M
 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - "./prometheus/:/etc/prometheus/"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+    ports:
+      - 9090:9090
+    depends_on:
+      - service-gateway
+    mem_limit: 256M
+
+  grafana:
+    image: grafana/grafana
+    volumes:
+      - "./grafana/provisioning:/etc/grafana/provisioning"
+    environment:
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    ports:
+      - 3000:3000
+    mem_limit: 512M
+
