--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
       resourceserver:
         jwt:
           jwk-set-uri: http://${auth-server.hostname}:${auth-server.port}/auth/realms/service-gateway-realm/protocol/openid-connect/certs
+
+  zipkin:
+    base-url: http://${zipkin.host:localhost}:${zipkin.port:9411}/
+  sleuth:
+    sampler:
+      probability: 100
 eureka:
   client:
     registerWithEureka: true
