--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       AUTH-SERVER_HOSTNAME: keycloak-auth-service
       AUTH-SERVER_PORT: 8080
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 300M
 
   deposit-service:
@@ -78,6 +80,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       AUTH-SERVER_HOSTNAME: keycloak-auth-service
       AUTH-SERVER_PORT: 8080
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 300M
 
   transaction-service:
@@ -98,6 +102,8 @@ services:
       DB_PASSWD: shashank
       DISCOVERY-SERVER_HOSTNAME: discovery-server
       DISCOVERY-SERVER_PORT: 7070
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 300M
 
   transfer-service:
@@ -116,6 +122,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       AUTH-SERVER_HOSTNAME: keycloak-auth-service
       AUTH-SERVER_PORT: 8080
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 300M
 
   withdraw-service:
@@ -134,6 +142,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       AUTH-SERVER_HOSTNAME: keycloak-auth-service
       AUTH-SERVER_PORT: 8080
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 300M
 
   service-gateway:
@@ -151,6 +161,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       AUTH-SERVER_HOSTNAME: keycloak-auth-service
       AUTH-SERVER_PORT: 8080
+      ZIPKIN_HOST: zipkin
+      ZIPKIN_PORT: 9411
     mem_limit: 512M
 
   prometheus:
@@ -171,12 +183,24 @@ services:
   grafana:
     image: grafana/grafana
     volumes:
-      - "./grafana/provisioning:/etc/grafana/provisioning"
+      - "./grafana/grafana.ini:/etc/grafana/grafana.ini"
+      - "./grafana/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml"
+      - "./grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml"
+      - "./grafana/dashboards:/etc/grafana/provisioning/dashboards/dashboards"
+      - "./grafana/dashboards:/var/lib/grafana/dashboards"
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     ports:
       - 3000:3000
+    mem_limit: 512M
+
+  zipkin:
+    image: openzipkin/zipkin
+    environment:
+      - STORAGE_TYPE=mem
+    ports:
+      - "9411:9411"
     mem_limit: 512M
 
