Integrating s3 bucket routing from gateway for fetching static content

--- a/service-gateway/src/main/resources/application-local.properties
+++ b/service-gateway/src/main/resources/application-local.properties
@@ -1,3 +1,13 @@
 discovery-server.hostname = localhost
 discovery-server.port = 7070
+auth-server.hostname = localhost
+auth-server.port = 8080
 server.port=9000
+s3.host = localhost
+s3.port = 4000
+spring.zipkin.enabled=false
+spring.cloud.discovery.enabled=false
+s3.static.bucket=test-bucket
+s3.access.key=access-key
+s3.secret.key=secret-key
+s3.region=us-east-1
