--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,6 +163,13 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      S3_HOST: s3
+      S3_PORT: 9000
+      S3_STATIC_BUCKET: test-bucket
+      S3_ACCESS_KEY: access-key
+      S3_SECRET_KEY: secret-key
+      S3_REGION: us-east-1
+
     mem_limit: 512M
 
   prometheus:
@@ -238,3 +245,16 @@ services:
       - elasticsearch
     mem_limit: 2g
 
+  s3:
+    image: minio/minio
+    entrypoint: sh
+    command: -c '/usr/bin/minio server /minio-data'
+    environment:
+      - MINIO_ACCESS_KEY=access-key
+      - MINIO_SECRET_KEY=secret-key
+    ports:
+      - "4000:9000"
+    restart: on-failure
+    volumes:
+      - ./minio-data:/minio-data
+    mem_limit: 512M
