Enabling http compression for spring cloud gateway

--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -197,3 +197,10 @@ logging:
         cloud.gateway: DEBUG
         http.server.reactive: DEBUG
         web.reactive: DEBUG
+
+
+server:
+  compression:
+    enabled: true
+    min-response-size: 1024
+    mime-types: '*/*'
