Integrating logstash with logback for all components

--- a/deposit-service/src/main/resources/application.yml
+++ b/deposit-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     max-in-memory-size: 1MB
   application:
     name: deposit-service
+  logstash:
+    server: ${logstash.hostname}
+    port: ${logstash.port}
   security:
     oauth2:
       resourceserver:
