--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -24,6 +24,10 @@ eureka:
     hostName: service-gateway
 
 spring:
+  boot:
+    admin:
+      client:
+        url: http://${admin.hostname}:${admin.port}
   application:
     name: service-gateway
   logstash:
