--- a/withdraw-service/src/main/resources/application.yml
+++ b/withdraw-service/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8083
 
 spring:
+  boot:
+    admin:
+      client:
+        url: http://${admin.hostname}:${admin.port}
   cloud:
     loadbalancer:
       ribbon:
@@ -41,3 +45,12 @@ logging:
       springframework:
         http.server.reactive: DEBUG
         web.reactive: DEBUG
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
