--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  boot:
+    admin:
+      client:
+        url: http://${admin.hostname}:${admin.port}
   application:
     name: discovery-server
   zipkin:
