--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_MULTIPLE_DATABASES: "app,keycloak"
       POSTGRES_PASSWORD: shashank
-    mem_limit: 512M
+    mem_limit: 100M
     volumes:
       - "./db-service/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d"
       - "./db-service/data:/var/lib/postgresql/data"
@@ -38,10 +38,24 @@ services:
       - "7070:7070"
     depends_on:
       - db-service
+      - admin-server
     entrypoint: "./wait-until-start -t 240 keycloak-auth-service:8080 -- java -jar /app.jar"
     environment:
       DISCOVERY-SERVER_HOSTNAME: discovery-server
       DISCOVERY-SERVER_PORT: 7070
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
+    mem_limit: 300M
+
+  admin-server:
+    build:
+      context: .
+      dockerfile: spring-reactive-cloud-admin/Dockerfile
+    ports:
+      - "6060:6060"
+    depends_on:
+      - db-service
+    entrypoint: "java -jar /app.jar"
     mem_limit: 300M
 
   account-service:
@@ -53,6 +67,7 @@ services:
     depends_on:
       - discovery-server
       - transaction-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 discovery-server:7070 -- java -jar /app.jar"
     environment:
@@ -63,6 +78,8 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
     mem_limit: 300M
@@ -76,6 +93,7 @@ services:
     depends_on:
       - discovery-server
       - transaction-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 discovery-server:7070 -- java -jar /app.jar"
     environment:
@@ -86,6 +104,8 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
     mem_limit: 300M
@@ -99,6 +119,7 @@ services:
     depends_on:
       - discovery-server
       - db-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 discovery-server:7070 -- java -jar /app.jar"
     environment:
@@ -111,6 +132,8 @@ services:
       DISCOVERY-SERVER_PORT: 7070
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
     mem_limit: 300M
@@ -124,6 +147,7 @@ services:
     depends_on:
       - discovery-server
       - transaction-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 discovery-server:7070 -- java -jar /app.jar"
     environment:
@@ -134,6 +158,8 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
     mem_limit: 300M
@@ -147,6 +173,7 @@ services:
     depends_on:
       - discovery-server
       - transaction-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 discovery-server:7070 -- java -jar /app.jar"
     environment:
@@ -157,6 +184,8 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
     mem_limit: 300M
@@ -170,6 +199,7 @@ services:
     depends_on:
       - discovery-server
       - keycloak-auth-service
+      - admin-server
       - logstash
     entrypoint: "./wait-until-start -t 240 keycloak-auth-service:8080 -- java -jar /app.jar"
     environment:
@@ -179,6 +209,8 @@ services:
       AUTH-SERVER_PORT: 8080
       ZIPKIN_HOST: zipkin
       ZIPKIN_PORT: 9411
+      ADMIN_HOSTNAME: admin-server
+      ADMIN_PORT: 6060
       LOGSTASH_HOSTNAME: logstash
       LOGSTASH_PORT: 5000
       S3_HOST: s3
@@ -203,7 +235,7 @@ services:
       - 9090:9090
     depends_on:
       - service-gateway
-    mem_limit: 256M
+    mem_limit: 100M
 
   grafana:
     image: grafana/grafana
@@ -219,7 +251,7 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
     ports:
       - 3000:3000
-    mem_limit: 256M
+    mem_limit: 100M
 
   zipkin:
     image: openzipkin/zipkin
@@ -275,4 +307,4 @@ services:
     restart: on-failure
     volumes:
       - ./minio-data:/minio-data
-    mem_limit: 256M
+    mem_limit: 100M
